--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -12,12 +12,16 @@ body{
 }
 
 header{
-  background: #272727;
+  
   width: 100%;
-  height: 90vh;
+  height: 91vh;
   padding: 40px 0;
   color: white;
   text-align: center;
+  background-color: #272727;
+  background-image: url('http://i.imgur.com/pnjLOlO.jpg');
+  background-position: center;
+  background-attachment: fixed;
 }
 
 #titleholder{
@@ -28,6 +32,7 @@ header h1{
   font-family: roboto;
   color: #59c134;
   font-size: 45px;
+  margin-top: 30vh;
 }
 
 header h3{
@@ -35,14 +40,29 @@ header h3{
   color: white;
 }
 
-.smoothScroll{
-  text-decoration: none;
+header button{
+  width: 70px;
+  height: 70px;
+  padding: 10px 16px;
+  font-size: 24px;
+  line-height: 1.33;
+  border-radius: 35px;
   color: white;
-  transition: all 0.05s linear;
+  border: none;
+  background-color: #272727;
+  cursor: pointer;
+  transition: all 0.08s linear;
 }
 
-.smoothScroll:hover{
-  color: green;
+header button:hover{
+  background-color: #59c134;
+}
+
+.smoothScroll{
+  text-decoration: none;
+  color: inherit;
+  transition: all 0.05s linear;
+  margin-left-right: 0;
 }
 
 nav ul{
@@ -52,7 +72,6 @@ nav ul{
   padding: 0;
   margin: 0;
   text-align: center;
-  list-style: none;
   -webkit-transition: max-height 0.4s;
   -ms-transition: max-height 0.4s;
   -moz-transition: max-height 0.4s;
@@ -66,25 +85,22 @@ nav ul{
   width: 100%;
 }
 
-.nav-placeholder{
-  margin: 0;
-}
-
 nav ul li{
   display: inline-block;
-  margin: 0 auto;
-  padding: 15px;
-  width: 65px;
-  background-color: #59C134;
-  text-align: center;
-  font-size: 18.5px;
+  padding: 20px;
   font-family: roboto;
+  font-weight: bold;
+  transition: all 0.05s linear;
+}
+
+nav ul li:hover{
+  background-color: #4EB32B;
 }
 
 .handle{
   width: 100%;
   background-color: #59C134;
-  text-align: right;
+  text-align: left;
   box-sizing: border-box;
   padding: 15px 10px;
   cursor: pointer;
@@ -103,7 +119,7 @@ nav ul li{
     box-sizing: border-box;
     width: 100%;
     padding: 15px;
-    font-size: 19px;
+    font-weight: bold;
     padding-left-right: 0;
   }
 
@@ -122,12 +138,11 @@ nav ul li{
     height:100%;
     box-sizing:border-box;
     text-align:center;
-    float: right;
     font-family:sans-serif;
     line-height:30px;
     color:white;
     font-size:15px;
-    background-color: #5A5C5C;
+    background-color: #4EB32B;
     cursor: pointer;
     -ms-transform: rotate(90deg); /* IE 9 */
     -webkit-transform: rotate(90deg); /* Chrome, Safari, Opera */
