--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -66,7 +66,7 @@ header button:hover{
 }
 
 nav ul{
-  background-color: #59c134;
+  background-color: #272727;
   overflow: hidden;
   color: white;
   padding: 0;
@@ -90,11 +90,11 @@ nav ul li{
   padding: 20px;
   font-family: roboto;
   font-weight: bold;
-  transition: all 0.05s linear;
+  transition: all 0.08s linear;
 }
 
 nav ul li:hover{
-  background-color: #4EB32B;
+  background-color: #59c134;
 }
 
 .handle{
