--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -804,6 +804,7 @@ footer {
   #projects h4 {
     text-align: center;
     font-family: Roboto;
+    font-weight: normal;
     font-size: 20px;
     color: #3c4040; }
   #projects .projectholder {
