fixed width of 'About' text

--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -851,7 +851,7 @@ footer {
     margin: 0 auto;
     color: #636363;
     font-size: 18px;
-    width: 50px; }
+    width: 50%; }
 
 #contact {
   text-align: center;
