--- a/app/styles/sass/partials/_base.scss
+++ b/app/styles/sass/partials/_base.scss
@@ -3,6 +3,7 @@
 html{
 	margin: 0;
 	padding: 0;
+	overflow-x: hidden;
 
 	body{
 		margin: 0;
@@ -116,6 +117,10 @@ nav{
 	padding: 15px 10px;
 	cursor: pointer;
 	display: none;
+
+	button{
+		float: right;
+	}
 }
 
 @media screen and (max-width: 580px){
@@ -139,6 +144,11 @@ nav{
 	.handle{
 		display: flex;
 		text-align: left;
+
+		button{
+			margin-left: 80%;
+			overflow: contain;
+		}
 	}
 }
 
