--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -28,9 +28,10 @@
   background-color: transparent;
   border: 0;
   margin: 0;
-  overflow: visible; }
+  overflow: visible;
+  float: right; }
   .hamburger:hover {
-    opacity: 0.7; }
+    opacity: 1; }
 
 .hamburger-box {
   width: 40px;
@@ -45,7 +46,7 @@
   .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
     width: 40px;
     height: 4px;
-    background-color: #000;
+    background-color: #FFF;
     border-radius: 4px;
     position: absolute;
     transition-property: transform;
@@ -637,7 +638,8 @@
 
 html {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  overflow-x: hidden; }
   html body {
     margin: 0;
     padding: 0;
@@ -723,6 +725,8 @@ nav ul {
   padding: 15px 10px;
   cursor: pointer;
   display: none; }
+  .handle button {
+    float: right; }
 
 @media screen and (max-width: 580px) {
   nav ul {
@@ -736,7 +740,10 @@ nav ul {
     max-height: 20em; }
   .handle {
     display: flex;
-    text-align: left; } }
+    text-align: left; }
+    .handle button {
+      margin-left: 80%;
+      overflow: contain; } }
 
 #content {
   margin: 0 auto;
