--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -855,7 +855,10 @@ footer {
     font-size: 45px;
     color: #3c4040; }
   #about h4 {
-    font-weight: normal; }
+    font-weight: normal;
+    font-family: Roboto;
+    font-size: 20px;
+    color: #3c4040; }
   #about p {
     margin: 0 auto;
     color: #636363;
