--- a/app/styles/sass/partials/_base.scss
+++ b/app/styles/sass/partials/_base.scss
@@ -14,14 +14,14 @@ html{
 
 header{
 	min-width: 100%;
-	height: 91vh;
+	height: 91.3vh;
 	padding: 40px 0;
 	color: white;
 	text-align: center;
-	background-image: url('http://i.imgur.com/pnjLOlO.jpg');
+	background: url('http://i.imgur.com/WRuSSWX.jpg');
   	background-position: center;
-  	background-attachment: fixed;
   	background-repeat: no-repeat;
+  	background-size: cover;
 
   	#titleholder{
   		padding: 5px;
@@ -29,31 +29,31 @@ header{
 
   	h1{
   		color: $green;
-  		font-family: sans-serif;
+  		font-family: $title;
   		font-size: 45px;
-  		margin-top: 30vh;
+  		margin-top: 20vh;
+  		-webkit-filter: contrast(140%);
+  		cursor: default;
   	}
 
   	h3{
   		font-family: $main;
   		color: white;
+  		-webkit-filter: contrast(140%);
   	}
 
-  	button{
-  		width: 70px;
-  		height: 70px;
-  		padding: 10px 16px;
-  		font-size: 24px;
-  		line-height: 1.33;
-  		border-radius: 35px;
-  		color: white;
-  		border: none;
-  		background-color: $dark-gray;
-  		cursor: pointer;
-  		transition: all 0.08s linear;
+  	p{
+  		font-family: $main;
+  		font-size: 20px;
+  	}
+
+  	a{
+  		font-size: 75px;
+  		transition: all 0.09s linear;
+  		
 
   		&:hover{
-  			background-color: $green;
+  			color: $green;
   		}
   	}
 
@@ -106,6 +106,7 @@ nav{
 	position: fixed;
 	top: 0;
 	text-align: center;
+	box-shadow: 0px 1.5px 19px 0px $dark-gray;
 }
 
 .handle{
@@ -117,6 +118,7 @@ nav{
 	padding: 15px 10px;
 	cursor: pointer;
 	display: none;
+	box-shadow: 0px 1.5px 19px 0px $dark-gray;
 
 	button{
 		float: right;
