--- a/app/styles/sass/partials/_projects.scss
+++ b/app/styles/sass/partials/_projects.scss
@@ -21,15 +21,16 @@
 	}
 
 	.projectholder{
-    padding: 10px;
+    padding: 15px;
 		margin: 0 auto;
     margin-top: 50px;
 		text-align: center;
-  	min-width: 250px;
-  	max-width: 400px;
+    border-style: none;
+    min-width: 30%;
+  	/*min-width: 250px;
+  	max-width: 400px;*/
   	display: inline-block;
   	background-color: $light-gray;
-  	border-radius: 3px;
   	transition: all 0.08s linear;
 
     &:hover{
@@ -56,11 +57,10 @@
   			height: 300px;
   			background-image: url('http://i.imgur.com/OBhG1ht.png');
   			background-position: center;
-  			background-size: 109%;
+  			background-size: cover;
   			cursor: pointer;
   			transition: all 0.08s linear;
       }
-  		}
-      
   	}
+  }
 }
