--- a/app/styles/sass/partials/_services.scss
+++ b/app/styles/sass/partials/_services.scss
@@ -5,11 +5,10 @@
 	margin: 0 auto;
 	display: block;
 	margin-bottom: 55px;
-	background-color: $light-gray;
+	background-color: $dark-gray;
 	text-align: center;
 
 	h1{
-		margin-top: 120px;
 		text-align: center;
 		color: white;
 		font-size: 45px;
@@ -33,7 +32,7 @@
 
 	div{
 		text-align: center;
-		background-color: $light-gray;
+		background-color: $dark-gray;
 		color: $green;
 		padding: 15px;
 		font-size: 100px;
