--- a/app/styles/sass/partials/_vars.scss
+++ b/app/styles/sass/partials/_vars.scss
@@ -1,5 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400);
 @import url(https://fonts.googleapis.com/css?family=Lobster+Two:400,700);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
 
 
 //colours
@@ -13,3 +14,4 @@ $text-dark: #636363;
 //fonts
 $main: Roboto;
 $heading: Lobster Two;
+$title: Open Sans;
