--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -7,14 +7,19 @@
  */
 @import url(https://fonts.googleapis.com/css?family=Roboto:400);
 @import url(https://fonts.googleapis.com/css?family=Lobster+Two:400,700);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
 @import url(https://fonts.googleapis.com/css?family=Roboto:400);
 @import url(https://fonts.googleapis.com/css?family=Lobster+Two:400,700);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
 @import url(https://fonts.googleapis.com/css?family=Roboto:400);
 @import url(https://fonts.googleapis.com/css?family=Lobster+Two:400,700);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
 @import url(https://fonts.googleapis.com/css?family=Roboto:400);
 @import url(https://fonts.googleapis.com/css?family=Lobster+Two:400,700);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
 @import url(https://fonts.googleapis.com/css?family=Roboto:400);
 @import url(https://fonts.googleapis.com/css?family=Lobster+Two:400,700);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
 .hamburger {
   padding: 1.5px 20px;
   display: inline-block;
@@ -647,38 +652,35 @@ html {
 
 header {
   min-width: 100%;
-  height: 91vh;
+  height: 91.3vh;
   padding: 40px 0;
   color: white;
   text-align: center;
-  background-image: url("http://i.imgur.com/pnjLOlO.jpg");
+  background: url("http://i.imgur.com/WRuSSWX.jpg");
   background-position: center;
-  background-attachment: fixed;
-  background-repeat: no-repeat; }
+  background-repeat: no-repeat;
+  background-size: cover; }
   header #titleholder {
     padding: 5px; }
   header h1 {
     color: #59c134;
-    font-family: sans-serif;
+    font-family: Open Sans;
     font-size: 45px;
-    margin-top: 30vh; }
+    margin-top: 20vh;
+    -webkit-filter: contrast(140%);
+    cursor: default; }
   header h3 {
     font-family: Roboto;
-    color: white; }
-  header button {
-    width: 70px;
-    height: 70px;
-    padding: 10px 16px;
-    font-size: 24px;
-    line-height: 1.33;
-    border-radius: 35px;
     color: white;
-    border: none;
-    background-color: #272727;
-    cursor: pointer;
-    transition: all 0.08s linear; }
-    header button:hover {
-      background-color: #59c134; }
+    -webkit-filter: contrast(140%); }
+  header p {
+    font-family: Roboto;
+    font-size: 20px; }
+  header a {
+    font-size: 75px;
+    transition: all 0.09s linear; }
+    header a:hover {
+      color: #59c134; }
   header .smoothScroll {
     text-decoration: none;
     color: inherit;
@@ -714,7 +716,8 @@ nav ul {
   width: 100%;
   position: fixed;
   top: 0;
-  text-align: center; }
+  text-align: center;
+  box-shadow: 0px 1.5px 19px 0px #272727; }
 
 .handle {
   width: 100%;
@@ -724,7 +727,8 @@ nav ul {
   box-sizing: border-box;
   padding: 15px 10px;
   cursor: pointer;
-  display: none; }
+  display: none;
+  box-shadow: 0px 1.5px 19px 0px #272727; }
   .handle button {
     float: right; }
 
@@ -767,10 +771,9 @@ footer {
   margin: 0 auto;
   display: block;
   margin-bottom: 55px;
-  background-color: #3c4040;
+  background-color: #272727;
   text-align: center; }
   #services h1 {
-    margin-top: 120px;
     text-align: center;
     color: white;
     font-size: 45px;
@@ -788,7 +791,7 @@ footer {
     margin-bottom: 50px; }
   #services div {
     text-align: center;
-    background-color: #3c4040;
+    background-color: #272727;
     color: #59c134;
     padding: 15px;
     font-size: 100px; }
@@ -817,15 +820,16 @@ footer {
     font-size: 20px;
     color: #3c4040; }
   #projects .projectholder {
-    padding: 10px;
+    padding: 15px;
     margin: 0 auto;
     margin-top: 50px;
     text-align: center;
-    min-width: 250px;
-    max-width: 400px;
+    border-style: none;
+    min-width: 30%;
+    /*min-width: 250px;
+  	max-width: 400px;*/
     display: inline-block;
     background-color: #3c4040;
-    border-radius: 3px;
     transition: all 0.08s linear; }
     #projects .projectholder:hover {
       background-color: #272727; }
@@ -842,14 +846,18 @@ footer {
         height: 300px;
         background-image: url("http://i.imgur.com/OBhG1ht.png");
         background-position: center;
-        background-size: 109%;
+        background-size: cover;
         cursor: pointer;
         transition: all 0.08s linear; }
 
 #about {
   width: 100%;
   text-align: center;
-  margin-top: 95px; }
+  margin-top: 0px;
+  background-color: #F2F2F2;
+  padding-top: 10px;
+  padding-bottom: 30px;
+  height: 94vh; }
   #about h1 {
     font-family: Lobster Two;
     font-size: 45px;
