--- a/app/styles/sass/partials/_vars.scss
+++ b/app/styles/sass/partials/_vars.scss
@@ -1,6 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400);
 @import url(https://fonts.googleapis.com/css?family=Lobster+Two:400,700);
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
+@import url(https://fonts.googleapis.com/css?family=Courgette);
 
 
 //colours
@@ -13,5 +14,5 @@ $text-dark: #636363;
 
 //fonts
 $main: Roboto;
-$heading: Lobster Two;
+$heading: Courgette;
 $title: Open Sans;
