--- a/app/styles/sass/partials/_about.scss
+++ b/app/styles/sass/partials/_about.scss
@@ -7,7 +7,6 @@
 	background-color: $white-gray;
 	padding-top: 10px;
 	padding-bottom: 30px;
-	height: 94vh;
 
 	h1{
 		font-family: $heading;
@@ -26,6 +25,7 @@
 		margin: 0 auto;
 		color: $text-dark;
 		font-size: 18px;
-		width: 50%;
+		min-width: 50%;
+		max-width: 80%;
 	}
 }
