--- a/app/styles/sass/partials/_base.scss
+++ b/app/styles/sass/partials/_base.scss
@@ -18,7 +18,7 @@ header{
 	padding: 40px 0;
 	color: white;
 	text-align: center;
-	background: url('http://i.imgur.com/WRuSSWX.jpg');
+	background: url('https://images.unsplash.com/photo-1430353577697-85a11f34f2ec?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=07ae0e25e0e4c666e0d299922ebc1ac4');
   	background-position: center;
   	background-repeat: no-repeat;
   	background-size: cover;
