--- a/app/styles/sass/partials/_vars.scss
+++ b/app/styles/sass/partials/_vars.scss
@@ -9,6 +9,7 @@ $green: #59c134;
 $dark-gray: #272727;
 $light-gray: #3c4040;
 $white-gray: #F2F2F2;
+$light-dark: #E8E8E8;
 $text-gray: #919191;
 $text-dark: #636363;
 
