--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -671,13 +671,11 @@ header {
     color: #59c134;
     font-family: Open Sans;
     font-size: 45px;
-    margin-top: 20vh;
-    -webkit-filter: contrast(140%);
+    margin-top: 30vh;
     cursor: default; }
   header h3 {
     font-family: Roboto;
-    color: white;
-    -webkit-filter: contrast(140%); }
+    color: white; }
   header p {
     font-family: Roboto;
     font-size: 20px; }
@@ -693,7 +691,10 @@ header {
     color: white; }
 
 nav ul {
+  position: fixed;
   overflow: hidden;
+  top: 0;
+  width: 100%;
   color: white;
   background-color: #272727;
   padding: 0;
@@ -710,20 +711,19 @@ nav ul {
     font-weight: bold;
     transition: all 0.09s linear; }
     nav ul li:hover {
-      background-color: #59c134; }
+      color: #59c134; }
   nav ul .smoothScroll {
     text-decoration: none;
     color: inherit;
     transition: all 0.05s linear;
     color: white; }
 
-.sticky {
-  width: 100%;
-  position: fixed;
-  top: 0;
-  text-align: center;
-  box-shadow: 0px 1.5px 19px 0px #272727; }
-
+/*.sticky{
+	width: 100%;
+	position: fixed;
+	top: 0;
+	text-align: center;
+}*/
 .handle {
   width: 100%;
   background-color: #59c134;
@@ -732,8 +732,7 @@ nav ul {
   box-sizing: border-box;
   padding: 15px 10px;
   cursor: pointer;
-  display: none;
-  box-shadow: 0px 1.5px 19px 0px #272727; }
+  display: none; }
   .handle button {
     float: right; }
 
@@ -825,27 +824,29 @@ footer {
     font-size: 20px;
     color: #3c4040; }
   #projects .projectholder {
-    padding: 15px;
+    padding: 10px;
     margin: 0 auto;
     margin-top: 50px;
     text-align: center;
     border-style: none;
-    min-width: 30%;
-    /*min-width: 250px;
-  	max-width: 400px;*/
+    max-width: 360px;
     display: inline-block;
-    background-color: #3c4040;
-    transition: all 0.08s linear; }
+    background-color: #F2F2F2;
+    transition: all 0.2s linear;
+    cursor: pointer; }
     #projects .projectholder:hover {
-      background-color: #272727; }
+      background-color: #E8E8E8; }
     #projects .projectholder a {
       text-decoration: none; }
       #projects .projectholder a h3 {
         text-align: center;
-        font-family: sans-serif;
-        color: #F2F2F2; }
+        font-family: Roboto;
+        color: #272727;
+        margin-top: 0;
+        padding-top: 2vh; }
       #projects .projectholder a p {
-        color: #919191; }
+        color: #636363;
+        font-family: Roboto; }
       #projects .projectholder a #projectimg1 {
         width: 100%;
         height: 300px;
@@ -853,7 +854,7 @@ footer {
         background-position: center;
         background-size: cover;
         cursor: pointer;
-        transition: all 0.08s linear; }
+        transition: all 0.1s linear; }
 
 #about {
   width: 100%;
