--- a/app/styles/sass/partials/_vars.scss
+++ b/app/styles/sass/partials/_vars.scss
@@ -2,6 +2,7 @@
 @import url(https://fonts.googleapis.com/css?family=Lobster+Two:400,700);
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
 @import url(https://fonts.googleapis.com/css?family=Courgette);
+@import url(https://fonts.googleapis.com/css?family=Yellowtail);
 
 
 //colours
@@ -15,5 +16,5 @@ $text-dark: #636363;
 
 //fonts
 $main: Roboto;
-$heading: Courgette;
+$heading: Yellowtail;
 $title: Open Sans;
